@@ -1,3 +1,9 @@
+2004-11-15  Miklos Szeredi <miklos@szeredi.hu>
+
+	* fusermount: do not resolve last component of mountpoint on if it
+	is '.' or '..'.  This new path resolvation is now done on mount as
+	well as unmount.  This enables relative paths to work on unmount.
+
 2004-11-14  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Released 2.1-pre1
